syntax = "proto3";

package ddex.v1beta1;

import "ddex/v1beta1/common.proto";
import "ddex/v1beta1/party.proto";
import "ddex/v1beta1/resource.proto";

option go_package = "github.com/OpenAudio/go-openaudio/pkg/api/ddex/v1beta1";

// Party Identification and Enrichment (PIE) message from the DDEX standard
message PieMessage {
  message PartyList {
    repeated Party party = 1;
  }

  message Party {
    message PartyType {
      string value = 1;
    }
    string party_reference = 1;
    ddex.v1beta1.Party.PartyId party_id = 2;
    repeated ddex.v1beta1.Party.PartyName party_name = 3;
    PartyType party_type = 4;

    // enrichment fields
    repeated Biography biographies = 5;
    repeated Resource.Image images = 6;
    repeated SocialMediaUrl social_media_urls = 7;
  }

  message Biography {
    string text = 1;
    PartyDescriptorWithPronounciation author = 2;
  }

  message SocialMediaUrl {
    string url = 1;
  }

  ddex.v1beta1.MessageHeader message_header = 1;
  PartyList party_list = 2;
}

message PieMessageAck {
  // address of the PIE message
  string pie_address = 1;
}
